// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pill component sanity matches default snapshot 1`] = `
.c2 {
  color: #3259D6;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 16px;
  padding-right: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 16px;
  border-radius: 16px;
}

.c2 {
  box-sizing: border-box;
}

.c1 {
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  text-align: left;
  color: #3259D6;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 16px;
  padding-right: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  position: relative;
  background: none;
  overflow: hidden;
}

.c0::before {
  content: '';
  display: block;
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  height: 100%;
  width: 100%;
  background-color: currentColor;
  opacity: 0.12;
  pointer-events: none;
}

<div
  class="c0 c1 c2"
  color="blue"
  display="inline-flex"
  font-family="sansSerif"
  font-size="1"
  font-weight="2"
  height="2"
/>
`;

exports[`Pill component sanity matches themed snapshot 1`] = `
.c3 {
  color: #3259D6;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 16px;
  padding-right: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 16px;
  border-radius: 16px;
}

.c3 {
  box-sizing: border-box;
}

.c2 {
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  text-align: left;
  color: #3259D6;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 16px;
  padding-right: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 {
  position: relative;
  background: none;
  overflow: hidden;
}

.c1::before {
  content: '';
  display: block;
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  height: 100%;
  width: 100%;
  background-color: currentColor;
  opacity: 0.12;
  pointer-events: none;
}

.c0 {
  font-size: 1em;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  color: #3F3D4B;
}

<div
  class="c0"
>
  <div
    class="c1 c2 c3"
    color="blue"
    display="inline-flex"
    font-family="sansSerif"
    font-size="1"
    font-weight="2"
    height="2"
  />
</div>
`;
